<resources>
    <string name="app_name">Tiquesinn Owner</string>
    <!--<string name="url" translatable="false">http://192.168.1.107:222/</string>-->
    <string name="url" translatable="false">http://tiquesinn.com/</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="username_error_msg">Enter user name</string>
    <string name="password_error_msg">Enter password</string>
    <string name="network_off_alert">Please turn on network</string>
    <string name="ok_button">OK</string>
    <string name="logout_q">Are you sure you want to logout? This will clear all the messages of this app.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="wait">Please wait . . .</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="success">Success</string>
    <string name="unsuccessful">Unsuccessful</string>
    <string name="logout_confirm">Do you want to logout?</string>
    <string name="loading">Loading…</string>
    <string name="please_login">Please Login</string>
    <string name="no_items">No items to display</string>
    <string name="rs">₹ : %1$s</string>
    <string name="product_no">Product No: %1$d</string>
    <string name="delete_chathead_q">Do you want to delete this chat?</string>
    <string name="mob_no">Mobile Number</string>
    <string name="dob">Date of Birth</string>
    <string name="anniversary">Anniversary</string>
    <string name="email">E-Mail</string>
    <string name="name">Name</string>
    <string name="loyalty_card_no">Loyalty Card Number</string>
    <string name="loyalty_points">Loyalty Points</string>
    <string name="count">Count : %1s</string>
    <string name="p_no">No : %1s</string>
    <string name="trending_products">Trending Products</string>
    <string name="purchases">Purchases</string>
    <string name="transactions">Transactions : %1s</string>
    <string name="products">Products</string>
</resources>
