<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="5dp"
        android:visibility="gone"
        android:id="@+id/user_details">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/textView1"
            android:textColor="@color/secondary_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="asdfsagergbergerv"
            android:id="@+id/userName"
            android:textColor="@color/primary_text"
            android:paddingBottom="10dp"
            android:layout_below="@+id/textView1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mob_no"
            android:id="@+id/textView2"
            android:layout_below="@+id/userName"
            android:textColor="@color/secondary_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5432483416854"
            android:id="@+id/mobile"
            android:textColor="@color/accent"
            android:paddingBottom="10dp"
            android:layout_below="@+id/textView2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/textView3"
            android:layout_below="@+id/mobile"
            android:textColor="@color/secondary_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="safsdf@email.com"
            android:id="@+id/email"
            android:textColor="@color/accent"
            android:paddingBottom="10dp"
            android:layout_below="@+id/textView3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loyalty_card_no"
            android:id="@+id/textView4"
            android:layout_below="@+id/email"
            android:textColor="@color/secondary_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1652645"
            android:id="@+id/loyaltyCardNo"
            android:textColor="@color/primary_text"
            android:paddingBottom="10dp"
            android:layout_below="@+id/textView4"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loyalty_points"
            android:id="@+id/textView5"
            android:layout_below="@+id/loyaltyCardNo"
            android:textColor="@color/secondary_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="500"
            android:id="@+id/loyaltyPoints"
            android:textColor="@color/primary_text"
            android:paddingBottom="10dp"
            android:layout_below="@+id/textView5"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dob"
            android:id="@+id/textView6"
            android:layout_below="@+id/loyaltyPoints"
            android:textColor="@color/secondary_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="24/23/2020"
            android:id="@+id/dob"
            android:textColor="@color/primary_text"
            android:paddingBottom="10dp"
            android:layout_below="@+id/textView6"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anniversary"
            android:id="@+id/textView7"
            android:layout_below="@+id/dob"
            android:textColor="@color/secondary_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12/04/2020"
            android:id="@+id/anniversory"
            android:textColor="@color/primary_text"
            android:paddingBottom="10dp"
            android:layout_below="@+id/textView7"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />



    </RelativeLayout>
        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/details_loading"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="visible"
            app:indicator="BallTrianglePath"
            app:indicator_color="@color/primary_text"
            android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>